--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="logo/logo.ico" type="image/x-icon">
+
+    <meta
+      name="title"
+      content="CineTrack – Your Personal Movie & Series Tracker"
+    />
+    <meta
+      name="description"
+      content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+    <meta charset="UTF-8" />
+    <meta name="theme-color" content="#0f172a" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta
+      property="og:title"
+      content="CineTrack – Your Personal Movie & Series Tracker"
+    />
+    <meta
+      property="og:description"
+      content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
+    />
+    <meta property="og:image" content="https://your-domain.com/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://your-domain.com/" />
+    <meta
+      name="twitter:title"
+      content="CineTrack – Your Personal Movie & Series Tracker"
+    />
+    <meta
+      name="twitter:description"
+      content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
+    />
+    <meta name="twitter:image" content="https://your-domain.com/og-image.jpg" />
+
+    <link rel="shortcut icon" href="logo/logo.ico" type="image/x-icon" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
+      rel="stylesheet"
+    />
+    <meta
+      name="google-site-verification"
+      content="tjx4zFrOvX9tu1r6ahNsBb7y1Df_0SCm0Ynub4JjxcM"
+    />
     <title>CineWish</title>
   </head>
   <body>
