--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
 
     <meta
       name="title"
-      content="CineTrack – Your Personal Movie & Series Tracker"
+      content="CineWish – Your Personal Movie & Series Tracker"
     />
     <meta
       name="description"
@@ -17,20 +17,20 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:url" content="https://cinewish.deno.dev" />
     <meta
       property="og:title"
-      content="CineTrack – Your Personal Movie & Series Tracker"
+      content="CineWish – Your Personal Movie & Series Tracker"
     />
     <meta
       property="og:description"
       content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
     />
-    <meta property="og:image" content="https://your-domain.com/og-image.jpg" />
+    <meta property="og:image" content="https://cinewish.deno.dev/logo/logo.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://your-domain.com/" />
+    <meta name="twitter:url" content="https://cinewish.deno.dev" />
     <meta
       name="twitter:title"
       content="CineTrack – Your Personal Movie & Series Tracker"
@@ -39,7 +39,7 @@
       name="twitter:description"
       content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
     />
-    <meta name="twitter:image" content="https://your-domain.com/og-image.jpg" />
+    <meta name="twitter:image" content="https://cinewish.deno.dev/logo/logo.png" />
 
     <link rel="shortcut icon" href="logo/logo.ico" type="image/x-icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
