--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,8 +12,10 @@
       content="Create your watchlist, mark what you've seen, get personalized recommendations and discover top-rated movies and series."
     />
 
-    <meta name="keywords" content="CineWish, wishlist movies, wishlist series, movie tracker, TV show watchlist, save movies to watch, track TV series, movie wishlist app, streaming watchlist, must-watch movies, binge watch list, organize favorite shows, upcoming movies tracker, watch later movies, best watchlist app">
-
+    <meta
+      name="keywords"
+      content="CineWish, wishlist movies, wishlist series, movie tracker, TV show watchlist, save movies to watch, track TV series, movie wishlist app, streaming watchlist, must-watch movies, binge watch list, organize favorite shows, upcoming movies tracker, watch later movies, best watchlist app"
+    />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="UTF-8" />
@@ -85,6 +87,21 @@
         "url": "https://cinewish.deno.dev",
         "logo": "https://cinewish.deno.dev/logo/logo.png"
       }
+    </script>
+
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-Q6NZJ2R40H"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-Q6NZJ2R40H");
     </script>
 
     <title>CineWish</title>
