--- a/frontend/index.html
+++ b/frontend/index.html
@@ -104,6 +104,9 @@
       gtag("config", "G-Q6NZJ2R40H");
     </script>
 
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7133037911836409"
+     crossorigin="anonymous"></script>
+
     <title>CineWish</title>
   </head>
   <body>
